fixed navbar z-index

--- a/src/Components/Styles/style.css
+++ b/src/Components/Styles/style.css
@@ -57,6 +57,8 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 444;
   > img {
     width: 100px;
     height: 25px;
